inspect template attributes inside playground

--- a/playground/play.ipynb
+++ b/playground/play.ipynb
@@ -49,6 +49,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'answer_choices': 'World politics ||| Sports ||| Business ||| Science and technology',\n",
+       " 'id': '24e44a81-a18a-42dd-a71c-5b31b2d2cb39',\n",
+       " 'jinja': 'What label best describes this news article?\\n{{text}} ||| \\n{{answer_choices[label] }}',\n",
+       " 'metadata': <promptsource.templates.Template.Metadata at 0x7fa04fbd80d0>,\n",
+       " 'name': 'classify_question_first',\n",
+       " 'reference': ''}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'choices_in_prompt': False,\n",
+       " 'languages': ['en'],\n",
+       " 'metrics': ['Accuracy'],\n",
+       " 'original_task': True}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template.metadata.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
